# controller/admin.go
@@ -5,7 +5,9 @@ import (
 	"fmt"
 	"github.com/gin-gonic/contrib/sessions"
 	"github.com/gin-gonic/gin"
+	"github.com/shipinlei/go_getaway_demo/dao"
 	"github.com/shipinlei/go_getaway_demo/dto"
+	"github.com/shipinlei/go_getaway_demo/golang_common/lib"
 	"github.com/shipinlei/go_getaway_demo/middleware"
 	"github.com/shipinlei/go_getaway_demo/public"
 )
@@ -15,6 +17,7 @@ type AdminController struct{}
 func AdminRegister(group *gin.RouterGroup) {
 	adminInfo := &AdminController{}
 	group.GET("/admin_info", adminInfo.AdminInfo)
+	group.POST("/change_pwd", adminInfo.ChangePwd)
 }
 
 // AdminInfo godoc
@@ -43,4 +46,57 @@ func (admininfo *AdminController) AdminInfo(c *gin.Context) {
 		Roles:        []string{"admin"},
 	}
 	middleware.ResponseSuccess(c, out)
+}
+
+// ChangePwd godoc
+// @Summary 修改密码
+// @Description 修改密码
+// @Tags 管理员接口
+// @ID /admin/change_pwd
+// @Accept  json
+// @Produce  json
+// @Param body body dto.ChangePwdInput true "body"
+// @Success 200 {object} middleware.Response{data=string} "success"
+// @Router /admin/change_pwd [post]
+func (admininfo *AdminController) ChangePwd(c *gin.Context) {
+	params := &dto.ChangePwdInput{}
+	if err := params.BindValidParam(c); err != nil {
+		middleware.ResponseError(c, 2000, err)
+		return
+	}
+	//1. session读取用户信息到结构体 sessInfo
+	//2. sessInfo.ID 读取数据库信息 adminInfo
+	//3. params.password + adminInfo.salt sha256 saltPassword
+	//4. saltPassword ==> adminInfo.password 保存到数据库
+
+	//session读取用户信息到结构体
+	sess := sessions.Default(c)
+	sessInfo := sess.Get(public.AdminSessionInfoKey)
+	adminSessionInfo := &dto.AdminSessionInfo{}
+	if err := json.Unmarshal([]byte(fmt.Sprint(sessInfo)), adminSessionInfo); err != nil {
+		middleware.ResponseError(c, 2000, err)
+		return
+	}
+	//从数据库中读取 adminInfo
+	tx, err := lib.GetGormPool("default")
+	if err != nil {
+		middleware.ResponseError(c, 2001, err)
+		return
+	}
+	adminInfo := &dao.Admin{}
+	adminInfo, err = adminInfo.Find(c, tx, (&dao.Admin{UserName: adminSessionInfo.UserName}))
+	if err != nil {
+		middleware.ResponseError(c, 2002, err)
+		return
+	}
+	//生成新密码
+	saltPassword := public.GenSaltPassword(adminInfo.Salt, params.Password)
+	adminInfo.Password = saltPassword
+
+	//保存数据
+	if err := adminInfo.Save(c, tx); err != nil {
+		middleware.ResponseError(c, 2003, err)
+		return
+	}
+	middleware.ResponseSuccess(c, "")
 }
